# ping-pong-axum

./: .dockerignore  Cargo.toml  flake.nix
docker/: Dockerfile  build.sh  entrypoint.sh
docker/receiver/: entrypoint.sh
docker/sender/: Dockerfile  entrypoint.sh
receiver/: Cargo.toml
receiver/src/: main.rs
receiver/templates/: index.html
sender/: Cargo.toml
sender/src/: main.rs
sender/templates/: index.html
