[workspace]
members = ["receiver", "sender"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
axum = "0.7.7"
axum-extra = "0.9.4"
cfg-if = "1.0.0"
clap = "4.5.20"
color-eyre = "0.6.3"
eyre = "0.6.12"
futures = "0.3.31"
mime = "0.3.17"
reqwest = "0.12.9"
tokio = "1.41.0"
tokio-util = "0.7.12"
tower-http = "0.6.1"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = "1.11.0"
