[package]
name = "receiver"
version.workspace = true
edition.workspace = true

[dependencies]
axum = { workspace = true, features = ["http2"] }
axum-extra = { version = "0.9.4", features = ["typed-header"] }
cfg-if.workspace = true
clap = { workspace = true, features = ["derive"] }
color-eyre.workspace = true
eyre.workspace = true
futures.workspace = true
mime.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "tracing", "net", "signal"] }
tower-http = { workspace = true, features = ["trace"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
